Use plonetheme.imioapps = 2.21 and do no more use source for plonetheme.imioapps as last changes are too invasive

--- a/dev.cfg
+++ b/dev.cfg
@@ -50,7 +50,7 @@ auto-checkout =
     imio.zamqp.pm
     plone.restapi
     plonemeeting.restapi
-    plonetheme.imioapps
+#    plonetheme.imioapps
     Products.CPUtils
     Products.PloneMeeting
 
