Include plone.versioncheck

--- a/dev.cfg
+++ b/dev.cfg
@@ -4,6 +4,9 @@ extends =
     amqp.cfg
     versions-dev.cfg
 
+extensions +=
+    plone.versioncheck
+
 parts +=
     test
     testrestapi
@@ -11,6 +14,7 @@ parts +=
     report
     robot
     code-analysis
+    ploneversioncheck
 
 auto-checkout =
     appy
@@ -132,3 +136,7 @@ pre-commit-hook = True
 directory =
         ${buildout:directory}/src/Products.PloneMeeting/src
 flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
+
+[ploneversioncheck]
+recipe = zc.recipe.egg
+eggs = plone.versioncheck
