--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -17,6 +17,11 @@ pycodestyle = 2.5.0
 mccabe = 0.6.1
 enum34 = 1.1.6
 entrypoints = 0.3
+plone.versioncheck = 1.7.0
+colorama = 0.4.4
+CacheControl = 0.12.6
+lockfile = 0.12.2
+msgpack = 1.0.2
 
 # robot, these versions works with Chrome 
 Pygments = 2.0.2
@@ -36,3 +41,5 @@ testfixtures = 6.10.3
 # restapi tests
 plone.tiles = 2.2.1
 collective.MockMailHost = 2.0.0
+
+#plone.app.relationfield = 1.3.0
