--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -43,3 +43,5 @@ plone.tiles = 2.2.1
 collective.MockMailHost = 2.0.0
 
 #plone.app.relationfield = 1.3.0
+
+collective.dexteritytextindexer = 2.2.1
