--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -5,4 +5,17 @@ extends =
     versions-jenkins.cfg
 #    solr.cfg
 
+parts +=
+    test-coverage
+
 source-directory = ${buildout:directory}/src
+
+[test-coverage]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
+    coverage report
+    coveralls
+output = bin/test-coverage.sh
+mode = 755
