Properly detect git info and branch name for coveralls

--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -16,6 +16,7 @@ input = inline:
     #!/bin/bash
     coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
     coverage report
-    coveralls
+    cd ${buildout:directory}/src/Products.PloneMeeting
+    coveralls --rcfile=${buildout:directory}/.coveragerc
 output = bin/test-coverage.sh
 mode = 755
