--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -17,6 +17,7 @@ input = inline:
     coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
     coverage report
     cd ${buildout:directory}/src/Products.PloneMeeting
-    coveralls --rcfile=${buildout:directory}/.coveragerc
+    cp ${buildout:directory}/.coverage* .
+    coveralls
 output = bin/test-coverage.sh
 mode = 755
