Use imio.pyutils sources

--- a/sources.cfg
+++ b/sources.cfg
@@ -47,6 +47,7 @@ imio.migrator = git ${remotes:imio}/imio.migrator.git pushurl=${remotes:imio_pus
 imio.pm.locales = git ${remotes:imio}/imio.pm.locales.git pushurl=${remotes:imio_push}/imio.pm.locales.git
 imio.pm.ws = git ${remotes:imio}/imio.pm.ws.git pushurl=${remotes:imio_push}/imio.pm.ws.git
 imio.prettylink = git ${remotes:imio}/imio.prettylink.git pushurl=${remotes:imio_push}/imio.prettylink.git
+imio.pyutils = git ${remotes:imio}/imio.pyutils.git pushurl=${remotes:imio_push}/imio.pyutils.git
 imio.zamqp.core = git ${remotes:imio}/imio.zamqp.core.git pushurl=${remotes:imio_push}/imio.zamqp.core.git
 imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_push}/imio.zamqp.pm.git
 
