--- a/dev.cfg
+++ b/dev.cfg
@@ -17,7 +17,7 @@ parts +=
     ploneversioncheck
 
 auto-checkout =
-    appy
+#    appy
     imio.actionspanel
     imio.annex
     imio.dashboard
@@ -25,6 +25,7 @@ auto-checkout =
     imio.history
     imio.migrator
     imio.prettylink
+    imio.pyutils
     imio.restapi
     collective.behavior.talcondition
 #    collective.ckeditor
