Use imio.restapi = 1.0a12, plonemeeting.restapi = 1.0b1

--- a/versions.cfg
+++ b/versions.cfg
@@ -239,8 +239,8 @@ functools32 = 3.2.3.post2
 configparser = 3.7.4
 
 # plonemeeting.restapi
-imio.restapi = 1.0a11
-plonemeeting.restapi = 1.0a6
+imio.restapi = 1.0a12
+plonemeeting.restapi = 1.0b1
 
 plone.restapi = 6.13.8
 PyJWT = 1.7.1
