Removed collective.documentgenerator, collective.eeafaceted.batchactions, collective.eeafaceted.collectionwidget, collective.eeafaceted.dashboard, collective.eeafaceted.z3ctable from sources for v4.1.x

--- a/dev.cfg
+++ b/dev.cfg
@@ -26,12 +26,12 @@ auto-checkout =
     collective.compoundcriterion
 #    collective.contact.core
 #    collective.contact.plonegroup
-    collective.documentgenerator
+#    collective.documentgenerator
     collective.dms.scanbehavior
-    collective.eeafaceted.batchactions
-    collective.eeafaceted.collectionwidget
-    collective.eeafaceted.dashboard
-    collective.eeafaceted.z3ctable
+#    collective.eeafaceted.batchactions
+#    collective.eeafaceted.collectionwidget
+#    collective.eeafaceted.dashboard
+#    collective.eeafaceted.z3ctable
     collective.excelexport
 #    collective.fontawesome
     collective.iconifiedcategory
