Use master for ckeditor and use sources for appy

--- a/dev.cfg
+++ b/dev.cfg
@@ -17,7 +17,7 @@ parts +=
     ploneversioncheck
 
 auto-checkout =
-#    appy
+    appy
     imio.actionspanel
     imio.annex
     imio.dashboard
@@ -28,7 +28,7 @@ auto-checkout =
     imio.pyutils
     imio.restapi
     collective.behavior.talcondition
-#    collective.ckeditor
+    collective.ckeditor
     collective.compoundcriterion
     collective.contact.core
     collective.contact.plonegroup
