--- a/sources.cfg
+++ b/sources.cfg
@@ -14,7 +14,7 @@ zopesvn = svn://svn.zope.org/repos/main/
 [sources]
 appy = svn https://svn.forge.pallavi.be/appy-dev/dev0
 collective.behavior.talcondition = git ${remotes:collective}/collective.behavior.talcondition.git pushurl=${remotes:collective_push}/collective.behavior.talcondition.git
-collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git branch=gbastien_afterExecCommand
+collective.ckeditor = git ${remotes:collective}/collective.ckeditor.git pushurl=${remotes:collective_push}/collective.ckeditor.git
 collective.compoundcriterion = git ${remotes:collective}/collective.compoundcriterion.git pushurl=${remotes:collective_push}/collective.compoundcriterion.git
 collective.contact.core = git ${remotes:collective}/collective.contact.core.git pushurl=${remotes:collective_push}/collective.contact.core.git
 collective.contact.plonegroup = git ${remotes:collective}/collective.contact.plonegroup.git pushurl=${remotes:collective_push}/collective.contact.plonegroup.git
