--- a/dev.cfg
+++ b/dev.cfg
@@ -28,7 +28,7 @@ auto-checkout =
     imio.pyutils
     imio.restapi
     collective.behavior.talcondition
-    collective.ckeditor
+#    collective.ckeditor
     collective.compoundcriterion
     collective.contact.core
     collective.contact.plonegroup
