Use appy = 1.0.5 and collective.dexteritytextindexer = 2.2.1

--- a/versions.cfg
+++ b/versions.cfg
@@ -12,7 +12,7 @@ Products.MeetingCommunes = 4.2b9
 
 # Required by:
 # Products.PloneMeeting
-appy = 1.0.4
+appy = 1.0.5
 beautifulsoup4 = 4.5.3
 natsort = 5.5.0
 collective.behavior.talcondition = 0.11
@@ -21,6 +21,7 @@ collective.compoundcriterion = 0.4
 collective.contact.core = 1.35
 collective.contact.plonegroup = 1.33
 collective.contact.widget = 1.12
+collective.dexteritytextindexer = 2.2.1
 collective.documentgenerator = 3.18
 collective.eeafaceted.batchactions = 1.6
 collective.eeafaceted.collectionwidget = 1.11
