Ignore Meeting.py in coverage, was moved from AT to DX

--- a/.coveragerc
+++ b/.coveragerc
@@ -4,6 +4,7 @@ omit =
     */test*
     */migrations/*
     */upgrades/*
+    */Meeting.py
     */MeetingUser.py
     */MeetingGroup.py
     */MeetingCategory.py
