Do no more use sources for imio.restapi Pin imio.restapi = 1.0a11, last version working with PloneMeeting 4.1.x Use branch 1.0ax for plonemeeting.restapi See #PM-3369

--- a/dev.cfg
+++ b/dev.cfg
@@ -20,7 +20,7 @@ auto-checkout =
     imio.history
     imio.migrator
     imio.prettylink
-    imio.restapi
+#    imio.restapi
     collective.behavior.talcondition
 #    collective.ckeditor
     collective.compoundcriterion
