--- a/sources.cfg
+++ b/sources.cfg
@@ -57,7 +57,7 @@ plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remo
 
 imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
 plone.restapi = git ${remotes:plone}/plone.restapi.git pushurl=${remotes:plone_push}/plone.restapi.git branch=master
-plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
+plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=1.0ax
 
 [port]
 public-url =
