Do no more use sources for collective.iconifiedcategory for branch 4.1.x

--- a/dev.cfg
+++ b/dev.cfg
@@ -34,7 +34,7 @@ auto-checkout =
 #    collective.eeafaceted.z3ctable
     collective.excelexport
 #    collective.fontawesome
-    collective.iconifiedcategory
+#    collective.iconifiedcategory
     collective.messagesviewlet
     collective.js.fancytree
     collective.js.iframeresizer
