Fix llv cfg files

--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -2,7 +2,6 @@
 
 extends =
     communes-dev.cfg
-    lalouviere.cfg
 
 auto-checkout +=
     Products.MeetingLalouviere
@@ -20,3 +19,10 @@ eggs =
     ${test:eggs}
     Products.MeetingLalouviere [test]
 environment = testenv
+
+[instance1]
+eggs +=
+    Products.MeetingLalouviere
+
+zcml +=
+    Products.MeetingLalouviere
