--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 extends =
-    communes-dev.cfg
+    qgit comm   qdev.cfg
 
 auto-checkout +=
     Products.MeetingLalouviere
@@ -26,3 +26,5 @@ eggs +=
 
 zcml +=
     Products.MeetingLalouviere
+    Products.MeetingCommunes
+    imio.pm.locales
