--- a/lalouviere-dev.cfg
+++ b/lalouviere-dev.cfg
@@ -1,16 +1,18 @@
 [buildout]
 
 extends =
-    qgit comm   qdev.cfg
+    dev.cfg
 
 auto-checkout +=
     Products.MeetingLalouviere
+    Products.MeetingCommunes
 
 parts +=
     testlalouviere
 
 [sources]
 Products.MeetingLalouviere = git ${remotes:imio}/Products.MeetingLalouviere.git pushurl=${remotes:imio_push}/Products.MeetingLalouviere.git branch=4.1.x
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
 
 [testlalouviere]
 recipe = zc.recipe.testrunner
