Use branch MOD-836_document_generator_search_and_replace for MeetingCommunes, enable script search_replace

--- a/dev.cfg
+++ b/dev.cfg
@@ -15,6 +15,7 @@ parts +=
     robot
     code-analysis
     ploneversioncheck
+    searchandreplace
 
 auto-checkout =
 #    appy
@@ -141,3 +142,7 @@ flake8-ignore = E123,E124,E501,E126,E127,E128,W391,C901
 [ploneversioncheck]
 recipe = zc.recipe.egg
 eggs = plone.versioncheck
+
+[searchandreplace]
+recipe = zc.recipe.egg
+eggs = collective.documentgenerator
