--- a/sources.cfg
+++ b/sources.cfg
@@ -55,7 +55,7 @@ Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:im
 # used to test branches on Jenkins, leave branch=master by default
 Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=MOD-836_replace_in_pod_templates_migration
 # profiles specific package
-Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
+Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=MOD-836_document_generator_search_and_replace
 
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
