start WCA adaptations

--- a/sources.cfg
+++ b/sources.cfg
@@ -40,7 +40,7 @@ communesplone.layout = git ${remotes:imio}/communesplone.layout.git pushurl=${re
 ftw.labels = git ${remotes:ftw}/ftw.labels.git pushurl=${remotes:ftw_push}/ftw.labels.git
 imio.actionspanel = git ${remotes:imio}/imio.actionspanel.git pushurl=${remotes:imio_push}/imio.actionspanel.git
 imio.annex = git ${remotes:imio}/imio.annex.git pushurl=${remotes:imio_push}/imio.annex.git
-imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git
+imio.dashboard = git ${remotes:imio}/imio.dashboard.git pushurl=${remotes:imio_push}/imio.dashboard.git branch=wca
 imio.helpers = git ${remotes:imio}/imio.helpers.git pushurl=${remotes:imio_push}/imio.helpers.git
 imio.history = git ${remotes:imio}/imio.history.git pushurl=${remotes:imio_push}/imio.history.git
 imio.migrator = git ${remotes:imio}/imio.migrator.git pushurl=${remotes:imio_push}/imio.migrator.git
@@ -53,7 +53,7 @@ imio.zamqp.pm = git ${remotes:imio}/imio.zamqp.pm.git pushurl=${remotes:imio_pus
 
 Products.CPUtils = git ${remotes:imio}/Products.CPUtils.git pushurl=${remotes:imio_push}/Products.CPUtils.git
 # used to test branches on Jenkins, leave branch=master by default
-Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=master
+Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${remotes:imio_push}/Products.PloneMeeting.git branch=wca
 # profiles specific package
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=master
 
@@ -62,6 +62,8 @@ plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remo
 imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
 plone.restapi = git ${remotes:plone}/plone.restapi.git pushurl=${remotes:plone_push}/plone.restapi.git branch=7.x.x
 plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=master
+
+pas.plugins.imio = git ${remotes:imio}/pas.plugins.imio.git pushurl=${remotes:imio_push}/pas.plugins.imio.git branch=master
 
 [port]
 public-url =
