added more auto checkout to wca-dev.cfg

--- a/wca-dev.cfg
+++ b/wca-dev.cfg
@@ -1,4 +1,6 @@
 [buildout]
 
 extends = wca.cfg
-auto-checkout += pas.plugins.imio
+auto-checkout +=
+    pas.plugins.imio
+    collective.eeafaceted.z3ctable
