--- a/sources.cfg
+++ b/sources.cfg
@@ -56,7 +56,7 @@ Products.PloneMeeting = git ${remotes:imio}/Products.PloneMeeting.git pushurl=${
 plonetheme.imioapps = git ${remotes:imio}/plonetheme.imioapps.git pushurl=${remotes:imio_push}/plonetheme.imioapps.git
 
 imio.restapi = git ${remotes:imio}/imio.restapi.git pushurl=${remotes:imio_push}/imio.restapi.git branch=master
-plone.restapi = git ${remotes:plone}/plone.restapi.git pushurl=${remotes:plone_push}/plone.restapi.git branch=master
+plone.restapi = git ${remotes:plone}/plone.restapi.git pushurl=${remotes:plone_push}/plone.restapi.git branch=7.x.x
 plonemeeting.restapi = git ${remotes:imio}/plonemeeting.restapi.git pushurl=${remotes:imio_push}/plonemeeting.restapi.git branch=1.0ax
 
 [port]
