For 4.1.x, do no more use sources for imio.zamqp.core and imio.zamqp.pm, code was adapted for Meeting DX

--- a/dev.cfg
+++ b/dev.cfg
@@ -46,8 +46,8 @@ auto-checkout =
     ftw.labels
     imio.pm.locales
     imio.pm.ws
-    imio.zamqp.core
-    imio.zamqp.pm
+#    imio.zamqp.core
+#    imio.zamqp.pm
     plone.restapi
     plonemeeting.restapi
 #    plonetheme.imioapps
