--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -35,6 +35,7 @@ RUN apt-get update -qqy \
                 libsasl2-dev \
                 libldap2-dev \
                 python-ldap-dbg \
+                librsvg2-dev \
                 libsigc++-2.0-dev" \
   && apt-get install -qqy --no-install-recommends $devDeps $buildDeps \
   && rm -rf /var/lib/apt/lists/*
