--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 
 extends =
-    communes.cfg
+#    communes.cfg
 #    communes-dev.cfg
 #    bep.cfg
 #    bep-dev.cfg
@@ -12,7 +12,7 @@ extends =
 #    idea.cfg
 #    idea-dev.cfg
 #    lalouviere.cfg
-#    lalouviere-dev.cfg
+    lalouviere-dev.cfg
 #    lalouviere-cpas.cfg
 #    lalouviere-cpas-dev.cfg
 #    liege.cfg
