--- a/.github/workflows/docker-hub-publish-4.1.yml
+++ b/.github/workflows/docker-hub-publish-4.1.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          - ref: 4.1.x
+          ref: 4.1.x
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       - name: Set up Docker Buildx
