sync CI config with master

--- a/jenkins.cfg
+++ b/jenkins.cfg
@@ -1,7 +1,23 @@
 [buildout]
 extends =
     communes-dev.cfg
+#    https://raw.githubusercontent.com/IMIO/buildout.jenkins/master/jenkins.cfg
     versions-jenkins.cfg
 #    solr.cfg
 
+parts +=
+    test-coverage
+
 source-directory = ${buildout:directory}/src
+
+[test-coverage]
+recipe = collective.recipe.template
+input = inline:
+    #!/bin/bash
+    coverage run --source=${buildout:directory}/src/Products.PloneMeeting bin/test --layer=!ROBOT
+    coverage report
+    cd ${buildout:directory}/src/Products.PloneMeeting
+    cp ${buildout:directory}/.coverage* .
+    coveralls
+output = bin/test-coverage.sh
+mode = 755
