--- a/dev.cfg
+++ b/dev.cfg
@@ -6,6 +6,7 @@ extends =
 
 parts +=
     test
+    testrestapi
     coverage
     report
     robot
@@ -93,6 +94,12 @@ zope_i18n_compile_mo_files = true
 ENV = dev
 OO_PORT = ${port:oo-port}
 PYTHON_UNO = ${port:python-uno}
+
+[testrestapi]
+recipe = zc.recipe.testrunner
+defaults = ['--auto-color', '--auto-progress', '-s', 'plonemeeting.restapi']
+eggs =
+    plonemeeting.restapi[test]
 
 # create bin/coverage commant
 [coverage]
