--- a/dev.cfg
+++ b/dev.cfg
@@ -72,6 +72,7 @@ verbose-security = on
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
     ENV dev
+    CUSTOM_TMP ${buildout:directory}/var/tmp
 #    PROFILE_PUBLISHER 1
 
 zope-conf-additional +=
