Commented CUSTOM_TMP in base.cfg for now, already defined in dev.cfg, this leads to `Error: too many values for 'CUSTOM_TMP'`

--- a/base.cfg
+++ b/base.cfg
@@ -111,7 +111,7 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
-  CUSTOM_TMP /var/tmp
+#  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
 
 eggs =
