--- a/dev.cfg
+++ b/dev.cfg
@@ -18,7 +18,7 @@ parts +=
     searchandreplace
 
 auto-checkout =
-#    appy
+    appy
     imio.actionspanel
     imio.annex
     imio.dashboard
@@ -72,7 +72,7 @@ verbose-security = on
 environment-vars +=
     ENABLE_PRINTING_MAILHOST True
     ENV dev
-    CUSTOM_TMP ${buildout:directory}/var/tmp
+    CUSTOM_TMP /tmp/appy
 #    PROFILE_PUBLISHER 1
 
 zope-conf-additional +=
