--- a/seraing-dev.cfg
+++ b/seraing-dev.cfg
@@ -21,7 +21,7 @@ zcml +=
 
 [sources]
 Products.MeetingCommunes = git ${remotes:imio}/Products.MeetingCommunes.git pushurl=${remotes:imio_push}/Products.MeetingCommunes.git branch=4.1.x
-Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=4.1.x
+Products.MeetingSeraing = git ${remotes:imio}/Products.MeetingSeraing.git pushurl=${remotes:imio_push}/Products.MeetingSeraing.git branch=SUP-18390_return_to_proposing_group_with_last_validation
 
 [testseraing]
 recipe = zc.recipe.testrunner
