--- a/versions-dev.cfg
+++ b/versions-dev.cfg
@@ -10,6 +10,9 @@ babel = 2.1.1
 coverage = 4.2
 plone.recipe.codeanalysis = 3.0.1
 flake8 = 3.7.7
+flake8-isort = 2.2.1
+flake8-polyfill = 1.0.2
+isort = 4.2.0
 check-manifest = 0.37
 typing = 3.6.6
 pyflakes = 2.1.1
