Test Products.PloneHotfix20210518 1.5

--- a/dev.cfg
+++ b/dev.cfg
@@ -84,6 +84,7 @@ eggs +=
     plone.reload
     collective.profiler
     robotframework-selenium2screenshots
+    Products.PloneHotfix20210518
     ${debug:eggs}
 
 zcml +=
