--- a/docker/Dockerfile-ubuntu20.04
+++ b/docker/Dockerfile-ubuntu20.04
@@ -1,4 +1,4 @@
-FROM imiobe/plone-base:4.3.19-ubuntu as builder
+FROM imiobe/plone-base:4.3.20-ubuntu as builder
 
 ENV DELIB_MAJOR=4.1 \
     DELIB_VERSION=4.1.19 \
@@ -87,7 +87,7 @@ RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && su -c "bin/buildout -t 30 -N" -s /bin/sh imio \
   && rm -rf develop-eggs/ src/ var/filestorage/ var/blobstorage/
 
-FROM imiobe/plone-base:4.3.19-ubuntu
+FROM imiobe/plone-base:4.3.20-ubuntu
 ENV DELIB_MAJOR=4.1 \
     DELIB_VERSION=4.1.19 \
     ZC_BUILDOUT=2.13.1 \
@@ -96,7 +96,7 @@ ENV DELIB_MAJOR=4.1 \
 
 LABEL delib=$DELIB_VERSION \
       name="ia.Delib" \
-      description="ia.Delib image, based on imiobe/plone-base:4.3.19-debian" \
+      description="ia.Delib image, based on imiobe/plone-base:4.3.20-ubuntu" \
       maintainer="iMio"
 
 COPY --from=builder /usr/local/lib/python2.7/dist-packages /usr/local/lib/python2.7/dist-packages
