--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ setuptools==44.1.1
 zc.buildout==2.13.4
 # mccabe fails to install during buildout?
 mccabe==0.6.1
+# python-ldap not available in OS package index ?
+# python-ldap
