--- a/dev.cfg
+++ b/dev.cfg
@@ -48,6 +48,7 @@ auto-checkout =
     ftw.labels
     imio.pm.locales
     imio.pm.ws
+    imio.restapi
 #    imio.zamqp.core
 #    imio.zamqp.pm
     plone.restapi
