Do no more take collective.messageviewlets source in dev by default This tries to fix a testing error with plonemeting.restapi 4.1.x on jenkins...

--- a/dev.cfg
+++ b/dev.cfg
@@ -37,7 +37,7 @@ auto-checkout =
     collective.excelexport
 #    collective.fontawesome
 #    collective.iconifiedcategory
-    collective.messagesviewlet
+#    collective.messagesviewlet
     collective.js.fancytree
     collective.js.iframeresizer
     collective.js.tooltipster
