Use testenv as environnement for [testrestapi]

--- a/dev.cfg
+++ b/dev.cfg
@@ -102,6 +102,7 @@ recipe = zc.recipe.testrunner
 defaults = ['--auto-color', '--auto-progress', '-s', 'plonemeeting.restapi']
 eggs =
     plonemeeting.restapi[test]
+environment = testenv
 
 # create bin/coverage commant
 [coverage]
