--- a/restapi.cfg
+++ b/restapi.cfg
@@ -9,10 +9,10 @@ eggs +=
     plonemeeting.restapi[test]
 
 [versions]
-imio.restapi = 1.0a11
-plonemeeting.restapi = 1.0a10
+imio.restapi = 1.0a14
+plonemeeting.restapi = 1.0rc1
 
-plone.restapi = 6.13.8
+plone.restapi = 7.3.8
 PyJWT = 1.7.1
 plone.schema = 1.2.1
 plone.rest = 1.6.1
