--- a/versions.cfg
+++ b/versions.cfg
@@ -1,6 +1,7 @@
 [versions]
-zc.buildout = 2.13.4
+zc.buildout = 3.0.0b2
 setuptools = 44.1.1
+pip = 20.3.4
 
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
@@ -228,7 +229,6 @@ imio.zamqp.core = 0.5
 imio.zamqp.pm = 0.10
 reportlab = 3.4.0
 PyPDF2 = 1.26.0
-pip = 9.0.1
 
 # Required by collective.zamqp 0.16.0
 certifi = 2017.11.5
