--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pip==20.3.4
 setuptools==44.1.1
 zc.buildout==3.0.0b2
+wheel
 # mccabe fails to install during buildout?
 mccabe==0.6.1
 # python-ldap not available in OS package index ?
