Fix buildout fails with zc.buildout = 3.0.0b2

--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -37,6 +37,7 @@ RUN apt-get update \
                 make \
                 wget \
                 python-pip \
+                python-wheel \
                 libpq-dev \
                 libreadline-dev \
                 gcc \
