--- a/base.cfg
+++ b/base.cfg
@@ -125,6 +125,7 @@ eggs =
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
+    imio.prometheus
 
 zcml =
     Products.PloneMeeting-overrides
@@ -132,6 +133,7 @@ zcml =
     Products.ZNagios-zcmonitor
     zc.z3monitor
     collective.monitor
+    imio.prometheus
 
 [instance-async]
 <= instance1
