--- a/versions.cfg
+++ b/versions.cfg
@@ -3,6 +3,11 @@ zc.buildout = 2.13.3
 setuptools = 44.1.1
 pip = 20.3.4
 
+imio.prometheus = 1.0.0
+# Required by:
+# imio.prometheus
+collective.prometheus = 1.6.0
+
 Products.DocFinderTab = 1.0.5
 mr.developer = 2.0.0
 
