--- a/base.cfg
+++ b/base.cfg
@@ -126,6 +126,7 @@ eggs =
     five.z2monitor
     Products.ZNagios
     zc.z3monitor
+    imio.prometheus
 
 zcml =
     Products.PloneMeeting-overrides
@@ -133,6 +134,7 @@ zcml =
     Products.ZNagios-zcmonitor
     zc.z3monitor
     collective.monitor
+    imio.prometheus
 
 [instance-async]
 <= instance1
