Added collective.big.bang to replace `make standard-config`

--- a/base.cfg
+++ b/base.cfg
@@ -113,6 +113,12 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
+  PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
+  DEFAULT_LANGUAGE fr
+  ACTIVE_BIGBANG True
+  SITE_ID standard
+  ADMIN_PASSWORD ${port:admin-password}
+#  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
 
 eggs =
@@ -127,6 +133,7 @@ eggs =
     Products.ZNagios
     zc.z3monitor
     imio.prometheus
+    collective.big.bang
 
 zcml =
     Products.PloneMeeting-overrides
@@ -135,6 +142,7 @@ zcml =
     zc.z3monitor
     collective.monitor
     imio.prometheus
+    collective.big.bang
 
 [instance-async]
 <= instance1
