--- a/versions.cfg
+++ b/versions.cfg
@@ -3,6 +3,8 @@ zc.buildout = 2.13.1
 setuptools = 40.8.0
 
 imio.prometheus = 1.0.0
+collective.big.bang = 1.0a2
+
 # Required by:
 # imio.prometheus
 collective.prometheus = 1.6.0
