Added collective.big.bang to replace `make standard-config`

--- a/base.cfg
+++ b/base.cfg
@@ -111,6 +111,10 @@ environment-vars =
   OO_PORT ${port:oo-port}
   PYTHON_UNO ${port:python-uno}
   PUBLIC_URL ${port:public-url}
+  PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
+  DEFAULT_LANGUAGE fr
+  ACTIVE_BIGBANG True
+  ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
 
@@ -126,6 +130,7 @@ eggs =
     Products.ZNagios
     zc.z3monitor
     imio.prometheus
+    collective.big.bang
 
 zcml =
     Products.PloneMeeting-overrides
@@ -134,6 +139,7 @@ zcml =
     zc.z3monitor
     collective.monitor
     imio.prometheus
+    collective.big.bang
 
 [instance-async]
 <= instance1
