--- a/versions.cfg
+++ b/versions.cfg
@@ -4,6 +4,8 @@ setuptools = 44.1.1
 pip = 20.3.4
 
 imio.prometheus = 1.0.0
+collective.big.bang = 1.0a2
+
 # Required by:
 # imio.prometheus
 collective.prometheus = 1.6.0
