--- a/base.cfg
+++ b/base.cfg
@@ -114,6 +114,7 @@ environment-vars =
   PLONE_EXTENSION_IDS Products.CMFPlone:plone-content
   DEFAULT_LANGUAGE fr
   ACTIVE_BIGBANG True
+  SITE_ID standard
   ADMIN_PASSWORD ${port:admin-password}
 #  CUSTOM_TMP /var/tmp
 #  FTW_LABELS_PERSONAL_LABELS ['lu']
