--- a/docker/Dockerfile-debian
+++ b/docker/Dockerfile-debian
@@ -134,9 +134,8 @@ WORKDIR /plone
 
 USER imio
 
-ENV HTTP_PORT=8081 \
- HOSTNAME_HOST=local \
- PROJECT_ID=plone \
+ENV ZEO_ADDRESS=zeo:8100 \
+ OO_SERVER=libreoffice \
  OO_PORT=2002 \
  USE_STREAM=False \
  CUSTOM_TMP=/var/tmp
