--- a/docker/Dockerfile-dev
+++ b/docker/Dockerfile-dev
@@ -68,7 +68,7 @@ RUN apt-get update \
 
 WORKDIR /plone
 
-COPY --chown=imio *.cfg *.conf requirements.txt Makefile standard-config.py /plone/
+COPY --chown=imio *.cfg *.conf requirements.txt Makefile /plone/
 
 RUN sed -i "s/\${buildout:directory}\/var/\/data/g" *.cfg \
   && echo "[buildout]" > buildout.cfg \
